# kate_moveit_config

./: .gitignore  .setup_assistant  CMakeLists.txt  README.md  generate_ikfast_plugin.sh  package.xml
config/: asrob.urdf.xacro  base.urdf.xacro  controllers.yaml  controllers.yaml~  grasping.yaml  ikfast61.cpp  jaco_arm.urdf  joint_limits.yaml  joint_names.yaml  katana_300_6m180.dae  katana_300_6m180.urdf  kate.srdf  kate.urdf  kinematics.yaml  kinematics.yaml~  kurtana.dae  kurtana.srdf  kurtana.urdf  kurtana.urdf.bak  kurtana_top.urdf.xacro  ompl_planning.yaml  ompl_planning.yaml~  robot.urdf.xacro  sensors_rgbd.yaml  sensors_rgbd.yaml~
launch/: bringup_moveit_planning_execution.launch  bringup_moveit_planning_execution.launch~  default_warehouse_db.launch  demo.launch  kate_moveit_controller_manager.launch  kate_moveit_sensor_manager.launch  kurtana_moveit_controller_manager.launch  kurtana_moveit_controller_manager.launch~  kurtana_moveit_sensor_manager.launch  kurtana_moveit_sensor_manager.launch~  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch  planning_context.launch  planning_pipeline.launch  run_benchmark_ompl.launch  sensor_manager.launch  setup_assistant.launch  tabletop_object_recognition.launch  trajectory_execution.launch  warehouse.launch
src/: kurtana_arm_ikfast_moveit_plugin.cpp  kurtana_arm_ikfast_solver.cpp
