<?xml version='1.0' encoding='ASCII'?>
<package><name>kate_moveit_config</name><version>0.2.0</version><description>
     AA ROS package with all the configuration and launch files for using Kate with the MoveIt Motion Planning Framework. The used robot arm is a Neuronics Katana 300 6m180 (5 DOF).
  </description><author email="s.pfiffner@gmail.com">Steffen Pfiffner</author><maintainer email="s.pfiffner@gmail.com">Steffen Pfiffner</maintainer><license>BSD</license><url type="website">http://moveit.ros.org/</url>

<run_depend>moveit_ros_move_group</run_depend>
  ]
<buildtool_depend>catkin</buildtool_depend>
  
</package>
